feat: Docker deployment support, Coze adapter, WebPreviewCard and docs
- Add Docker and Docker Compose for one-click deployment
- Add CozeAdapter for second Agent provider
- Add WebPreviewCard for HTML preview
- Add DiffCard for code diff display
- Add AgentList page for agent management
- Add comprehensive development docs (specs, skills, rules)
- Update README with Docker deployment instructions

Co-Authored-By: Claude <noreply@anthropic.com>